--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "^0.73.6",
-    "react-native-gesture-handler": "^2.14.0"
+    "react-native": "^0.74.1",
+    "react-native-gesture-handler": "^2.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
